force-app/main/default/objects/Relationship__c/Relationship__c.object-meta.xml
<CustomObject>
    <label>Relationship</label>
    <nameField>
        <displayFormat>REL-{0000000}</displayFormat>
        <label>Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>