force-app/main/default/objects/Relationship__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The organization tracked on this Relationship Record. Used in Contact to Account and Account to Account Relationships.</description>
    <inlineHelpText>The organization tracked on this Relationship Record.</inlineHelpText>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Can only associate contacts with Org accounts</errorMessage>
        <filterItems>
            <field>Account.Contact__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relationships</relationshipLabel>
    <relationshipName>Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>