force-app/main/default/objects/Relationship__c/fields/Active_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Active_Relationship__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, indicates that this Relationship is Active.</description>
    <inlineHelpText>Indicates the Relationship is current. Will automatically be set to false when:
1. The Relationship End Date is set to a value in the past - OR -
2. A Relationship End Date set for the future is reached.</inlineHelpText>
    <label>Active Relationship</label>
    <type>Checkbox</type>
</CustomField>