force-app/main/default/objects/Relationship__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person tracked on this Relationship Record. Used in Contact to Account and Contact to Contact Relationships.</description>
    <inlineHelpText>The person tracked on this Relationship Record.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Relationships</relationshipLabel>
    <relationshipName>Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>