force-app/main/default/objects/Relationship__c/fields/FERPA__c.field-meta.xml
<CustomField>
    <fullName>FERPA__c</fullName>
    <description>FERPA Message</description>
    <formula>IF( ( RecordType.DeveloperName="Contact_to_Contact" ),
"Check the student’s Parent Guest Access Permissions to determine whether FERPA-protected information can be shared and with whom",NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FERPA</label>
    <type>Text</type>
</CustomField>