force-app/main/default/objects/Relationship__c/fields/Original__c.field-meta.xml
<CustomField>
    <fullName>Original__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used by DBM integration for Original is checked if relationship is created by DBM</description>
    <inlineHelpText>Original checkbox used by DBM integration</inlineHelpText>
    <label>Original</label>
    <type>Checkbox</type>
</CustomField>