force-app/main/default/objects/Relationship__c/fields/Parent_Guest_Access__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guest_Access__c</fullName>
    <description>Link to PeopleSoft Portal with EMPLID</description>
    <formula>IF( ( RecordType.DeveloperName="Contact_to_Contact" ),
IF( NOT(ISBLANK( Contact__r.EMPLID__c )),
HYPERLINK("https://cs.oasis.asu.edu/psp/asucsprd/EMPLOYEE/CAMP/c/ASU_STUDENT_RECORDS.ASU_PP_PROXY_INQ.GBL?EMPLID=" + Contact__r.EMPLID__c ,"Parent Guest Access")
,NULL)
,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Guest Access</label>
    <type>Text</type>
</CustomField>