force-app/main/default/objects/Relationship__c/fields/Primary_Parent__c.field-meta.xml
<CustomField>
    <fullName>Primary_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indicator for primary Parent Guardian</description>
    <label>Primary Parent</label>
    <type>Checkbox</type>
</CustomField>