force-app/main/default/objects/Relationship__c/fields/Reciprocal_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Reciprocal_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Provides a direct connection between a Relationship and it's reciprocal record. Used for Contact to Contact and Account to Account Relationships.</description>
    <inlineHelpText>Provides a direct connection between a Relationship and it's reciprocal record. Used for Contact to Contact and Account to Account Relationships.</inlineHelpText>
    <label>Reciprocal Relationship</label>
    <referenceTo>Relationship__c</referenceTo>
    <relationshipLabel>Reciprocal Relationships</relationshipLabel>
    <relationshipName>Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>