force-app/main/default/objects/Relationship__c/fields/Reciprocal_Souce__c.field-meta.xml
<CustomField>
    <fullName>Reciprocal_Souce__c</fullName>
    <description>Reciprocal Relationship Source</description>
    <formula>IF( ISNULL(Reciprocal_Relationship__c) , "",  TEXT(Reciprocal_Relationship__r.Source__c) )</formula>
    <label>Reciprocal Souce</label>
    <type>Text</type>
</CustomField>