force-app/main/default/objects/Relationship__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated organization in an Account to Account Relationship. Used in Account to Account Relationships only. Note that the Related List from this Lookup is never to be added to a page layout.</description>
    <inlineHelpText>The associated organization in an Account to Account Relationship.</inlineHelpText>
    <label>Related Account (of)</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Can only associate contacts to ORG Accounts</errorMessage>
        <filterItems>
            <field>Account.Contact__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relationships - Related Account</relationshipLabel>
    <relationshipName>Reciprocal_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>