force-app/main/default/objects/Relationship__c/fields/Related_Contact__c.field-meta.xml
<CustomField>
    <fullName>Related_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated person in a Contact to Contact Relationship. Used in Contact to Contact Relationships only. Note that the Related List from this Lookup is never to be added to a page layout.</description>
    <inlineHelpText>The associated person in a Contact to Contact Relationship.</inlineHelpText>
    <label>Related Contact (of)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Relationships - Related Contact</relationshipLabel>
    <relationshipName>Reciprocal_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>