force-app/main/default/objects/Relationship__c/fields/Relationship_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Created_By__c</fullName>
    <description>Relationship Created By has the profile name of the user who created the relationship</description>
    <label>Relationship Created By</label>
    <length>120</length>
    <type>Text</type>
</CustomField>