force-app/main/default/objects/Relationship__c/fields/Relationship_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Relationship_End_Date__c</fullName>
    <description>Records the date this Relationship ended.</description>
    <inlineHelpText>The date this Relationship ended. Will automatically be set to Today's date if the Relationship Status is set to Inactive, but can be edited.</inlineHelpText>
    <label>Relationship End Date</label>
    <type>Date</type>
</CustomField>