force-app/main/default/objects/Relationship__c/fields/Relationship_Notes__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Notes__c</fullName>
    <description>Used to record notes and information specific to this Relationship.</description>
    <label>Relationship Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>