force-app/main/default/objects/Relationship__c/fields/Relationship_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Records the date this Relationship began.</description>
    <inlineHelpText>The date this Relationship began. Will automatically be set to Today's date, but can be edited.</inlineHelpText>
    <label>Relationship Start Date</label>
    <type>Date</type>
</CustomField>