force-app/main/default/objects/Relationship__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <description>Defines the type or Relationship (e.g. Employee, Parent, Spouse).</description>
    <label>Relationship Type (is)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Sibling</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Organization</fullName>
            </value>
            <value>
                <fullName>Parent/Guardian</fullName>
            </value>
            <value>
                <fullName>Employer</fullName>
            </value>
            <value>
                <fullName>Intern Employee</fullName>
            </value>
            <value>
                <fullName>Intern Employer</fullName>
            </value>
            <value>
                <fullName>Organization/Group</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Partner Organization</fullName>
            </value>
            <value>
                <fullName>Parent Organization</fullName>
            </value>
            <value>
                <fullName>Subsidiary</fullName>
            </value>
            <value>
                <fullName>Affiliate Organization</fullName>
            </value>
            <value>
                <fullName>Corporate Partner</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>