force-app/main/default/objects/Relationship__c/fields/Revoke_Status__c.field-meta.xml
<CustomField>
    <fullName>Revoke_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box when a student has revoked access to a parent or guardian from PeopleSoft source PS MyASU Parent Guest Portal</description>
    <inlineHelpText>Check this box when a student has revoked access to a parent or guardian</inlineHelpText>
    <label>Revoked Status</label>
    <type>Checkbox</type>
</CustomField>