force-app/main/default/objects/Relationship__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Where the Relationship Information came from</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PS MyASU Guest Portal</fullName>
            </value>
            <value>
                <fullName>PeopleSoft</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Manual Population</fullName>
                <default>true</default>
                <label>Manual Population</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>