force-app/main/default/objects/Relationship__c/fields/Source_Date__c.field-meta.xml
<CustomField>
    <fullName>Source_Date__c</fullName>
    <description>When the Relationship was created</description>
    <label>Source Date</label>
    <type>Date</type>
</CustomField>