force-app/main/default/objects/Relationship__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <description>When a Relationship Type is Parent/Guardian we need to further define who the Guardian Relationship</description>
    <inlineHelpText>When a Relationship Type is Parent/Guardian we need to further define who the Guardian Relationship</inlineHelpText>
    <label>Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Relationship_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aunt</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Grandparent</fullName>
            </value>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Sibling</fullName>
            </value>
            <value>
                <fullName>Uncle</fullName>
            </value>
            <value>
                <fullName>Related is Father</fullName>
            </value>
            <value>
                <fullName>Related is Mother</fullName>
            </value>
            <value>
                <fullName>Related is Uncle</fullName>
            </value>
            <value>
                <fullName>Related is Aunt</fullName>
            </value>
            <value>
                <fullName>Related is Grandparent</fullName>
            </value>
            <value>
                <fullName>Related is Sibling</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Legal Guardian</fullName>
            </value>
            <value>
                <fullName>Stepfather</fullName>
            </value>
            <value>
                <fullName>Stepmother</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Related is Legal Guardian</fullName>
            </value>
            <value>
                <fullName>Related is Stepfather</fullName>
            </value>
            <value>
                <fullName>Related is Stepmother</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>