force-app/main/default/objects/Relationship__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>The Contact's Title. Used in Contact to Account relationships.</description>
    <inlineHelpText>Used for Contact to Account Relationships to indicate the Contact's Title at the associated Account.</inlineHelpText>
    <label>Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>