force-app/main/default/objects/Relationship__c/recordTypes/Account_to_Account.recordType-meta.xml
<RecordType>
    <fullName>Account_to_Account</fullName>
    <active>true</active>
    <description>Defines a Relationship between a Organization and an Organization (e.g. Competitor, Partner)</description>
    <label>Account to Account</label>
</RecordType>