force-app/main/default/objects/Relationship__c/recordTypes/Account_to_Contact.recordType-meta.xml
<RecordType>
    <fullName>Account_to_Contact</fullName>
    <active>true</active>
    <label>Account to Contact</label>
</RecordType>