force-app/main/default/objects/Relationship__c/recordTypes/Contact_to_Account.recordType-meta.xml
<RecordType>
    <fullName>Contact_to_Account</fullName>
    <active>true</active>
    <description>Defines a relationship between a Person and Organization (e.g. Employee, Member)</description>
    <label>Contact to Account</label>
</RecordType>