force-app/main/default/objects/Relationship__c/recordTypes/Contact_to_Contact.recordType-meta.xml
<RecordType>
    <fullName>Contact_to_Contact</fullName>
    <active>true</active>
    <description>Defines a Relationship from a Person to a Person (e.g. Spouse, Parent)</description>
    <label>Contact to Contact</label>
</RecordType>