force-app/main/default/objects/Relationship__c/validationRules/Account_to_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_to_Contact</fullName>
    <active>true</active>
    <description>Prevents users from inputting values in the 'Contact' or 'Related Account' field for record type: Account to Contact. In addition, it requires both the 'Account' and 'Related Contact (of)' fields to be populated.</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = "Account_to_Contact",
ISNEW(),

OR(
AND(
NOT(ISBLANK(Contact__c)),
NOT(ISBLANK(Related_Contact__c))
),
AND(
NOT(ISBLANK(Related_Account__c)),
NOT(ISBLANK(Account__c))
),
ISBLANK(Account__c),
ISBLANK(Related_Contact__c)

)
)</errorConditionFormula>
    <errorMessage>In an 'Account to Contact' relationship, the fields 'Account' and 'Related Contact (of)' are REQUIRED. Do NOT select 'Related Account (of)' or 'Contact' as these are not valid for record type: Account to Contact.</errorMessage>
</ValidationRule>