force-app/main/default/objects/Relationship__c/validationRules/DBAMP_created.validationRule-meta.xml
<ValidationRule>
    <fullName>DBAMP_created</fullName>
    <active>true</active>
    <description>Validation rule to prevent users from editing relationships created by DBAMP</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
CreatedBy.Alias = "dbamp",
$Profile.Name &lt;&gt; "System Administrator"
)</errorConditionFormula>
    <errorMessage>Record is LOCKED DOWN. Users cannot edit records created by integrations.</errorMessage>
</ValidationRule>