force-app/main/default/objects/Relationship__c/listViews/Account_Relationship.listView-meta.xml
<ListView>
    <fullName>Account_Relationship</fullName>
    <columns>NAME</columns>
    <columns>Active_Relationship__c</columns>
    <columns>Relationship_Type__c</columns>
    <columns>Contact__c</columns>
    <columns>Related_Contact__c</columns>
    <columns>Account__c</columns>
    <columns>Related_Account__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Title__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>Uber</value>
    </filters>
    <label>Account Relationship</label>
</ListView>